src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail34.jova

class Test{
    Test(String x, int y){

    }
    Test(bool x, int y){

    }
}